<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ramiya.app1.UserPage">


    <RadioGroup
        android:id="@+id/radioSex"
        android:layout_width="400dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:padding="50dp"
        android:visibility="visible">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:checked="true"
            android:text="@string/male"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/female"
            android:textSize="24sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_above="@+id/editText5"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/editText2"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/editText5"
        android:layout_below="@+id/editText5"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_below="@+id/editText6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/sign_up"
        android:textSize="24sp" />


</RelativeLayout>
