<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ramiya.app1.DailyNeeds">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:text="  PHONE NUMBER VERIFICATION" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginStart="17dp"
        android:layout_marginTop="26dp"
        android:text="@string/india_91"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/editText"
        android:layout_marginTop="30dp"
        android:text="@string/please_enter_your_phone_number_we_will_send_you_otp_for_verification"
        android:textAlignment="center" />


</RelativeLayout>
